--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-<div class="left"></div>
+    <div class="left"></div>
+    
+    <div class="right"></div>
+
+
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
 </body>
 
